# doslib2

./: .gitmodules  Makefile  Makefile.am  README  README~  TARGETS  TARGETS~  TODO  autogen.sh  cleantree  config.h.filter  config.utils.mak  config_mak  config_public.h  configure.in  do-build  do-build-all-targets  do-build-efi  do-build-freaking-everything  do-build-linuxonly  download-item.pl  git-push-to-github.sh  git-push-to-hackipedia.pl  git-source-pickup.pl  make-lowercase  mk-test-iso.sh
autoinst/: Makefile  Makefile.am  build-all-images.sh
autoinst/automs622hdd/: Makefile  Makefile.am  autoexec.bat.init  autoexec.bat.init.v210  autoexec.bat.init.v320  autoexec.bat.init.v401  autoexec.bat.init.v50  boot.dsk  cleanup  config.sys.init.v210  config.sys.init.v320  config.sys.init.v330nec  config.sys.init.v401  config.sys.init.v50  config.sys.init.v60  config.sys.init.v70  config.sys.init.v710win98se  config.sys.init.v80winme  dosshell.bat.v4.01  expand  make622hdd.everything.everysize.sh  make622hdd.everything.sh  make622hdd.pl  make622hdd.test.2.1.dosbox.pl  make622hdd.test.2.1.sh  make622hdd.test.2.2td.dosbox.pl  make622hdd.test.3.20.sh  make622hdd.test.3.20epson.dosbox.pl  make622hdd.test.3.20epson.pl  make622hdd.test.3.20epson.sh  make622hdd.test.3.30.sh  make622hdd.test.3.30nec.sh  make622hdd.test.4.01.pl  make622hdd.test.5.0.sh  make622hdd.test.6.0.sh  make622hdd.test.6.20.sh  make622hdd.test.6.21.sh  make622hdd.test.7.0.sh  make622hdd.test.7.0sp1.sh  make622hdd.test.7.1osr2.sh  (+9 more)
autoinst/automs622hdd/BUGS/MS-DOS 3.3 NEC/: GWBASIC.EXE You cannot SHELL to BASIC.txt
autoinst/automs622hdd/BUGS/MS-DOS v4.01/: Error loading Operating System if hard drive 2MB or less.txt
autoinst/automs622hdd/WORK_IN_PROGRESS/: MS-DOS 2.2 attempts to make a bootable hard drive.txt
bios/: Makefile  Makefile.am
bios/asmexam/rombios/: Makefile  Makefile.am  Makefile.wcc  a20stat.asm  comm8042.inc  get16286.asm  get16m.asm  get16m.txt  get1m.asm  get1m.txt  get4g.asm  get4g_4m.asm  get64m.asm  getfrmcm.inc  getfrmin.inc  linux_get4g.c  linux_get4g_2m.c  linux_getcommon.c  test320.dsk  test360.dsk  test720.dsk  winnt_get1m.c  winnt_get4g.c  winnt_getcommon.c
dos/: Makefile  Makefile.am
dos/asmexam/: 32div16.asm  32mul16.asm  64div16.asm  64mul16.asm  LIST  Makefile  Makefile.am  Makefile.wcc  TODO  allocid.asm  allocis.asm  allocmem.asm  bootdrv.asm  chattr_a.asm  chattr_h.asm  chattr_r.asm  chattr_s.asm  chdir.asm  creados3.asm  creados4.asm  creasee2.asm  creasee3.asm  creaseek.asm  creat.asm  creat4g2.asm  creat4gb.asm  createmp.asm  ctrlbrk.asm  ctrlbrkx.asm  defdrive.asm  delete.asm  dellabel.asm  devprefx.asm  dir.asm  dir20.asm  disk360.disk1  disk360.disk2  diskcap.asm  diskcp95.asm  dlock.asm  (+108 more)
dos/empty/: Makefile  Makefile.am  Makefile.wcc  NOTES.TXT  empty1.c  replace-bootsector-other.pl
dos/lib/examdll/: Makefile  Makefile.am  Makefile.wcc  examdll.c  examdll1.c  examdll2.c  examdll3.c  examdll4.c
dos/lib/stub/: Makefile  Makefile.am  Makefile.wcc  stub.asm
efi/: Makefile.am
efi/example/: Makefile.am  Makefile.wcc  efidoslib_assert.c  efidoslib_base.c  efidoslib_printf.c  efidoslib_utf.c  efidoslib_utf.h  hello.c  printf.c
ext/: Makefile  Makefile.am
ext/gzip/tests/: Makefile.am  helin-segv  help-version  hufts  init.cfg  memcpy-abuse  null-suffix-clobber  stdin  trailing-nul  zgrep-signal  znew-k
ext/gzip/x/gzip-1.5/: ChangeLog  Makefile.am  aclocal.m4  cfg.mk  configure.ac  deflate.c  gunzip.in  gzexe.in  gzip.1  gzip.c  gzip.h  inflate.c  revision.h  tailor.h  trees.c  unlzw.c  unpack.c  unzip.c  util.c  zcat.in  zcmp.in  zdiff.in  zegrep.in  zfgrep.in  zforce.in  zgrep.in  zip.c  zless.in  zmore.1  zmore.in  znew.in
ext/gzip/x/gzip-1.5/doc/: Makefile.am  gzip.info  gzip.texi  stamp-vti
ext/gzip/x/gzip-1.5/lib/: Makefile.am  config.hin  gnulib.mk  match.c
ext/gzip/x/gzip-1.5/m4/: gnulib-comp.m4  shell.m4
ext/gzip/x/gzip-1.5/tests/: mixed  zdiff  zgrep-f
ext/zlib/: Makefile  Makefile.am  Makefile.dpl  Makefile.wcc  crc32.c  crc32.h  deflate.c  deflate.h  example.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inflate.c  inflate.h  inftrees.c  inftrees.h  minigzic.c  minigzip.c  zconf.h  zlib.h  zutil.h
graphics/: Makefile  Makefile.am
graphics/lines/: Makefile  Makefile.am  Makefile.bresham1  Makefile.naive1  Makefile.wcc  bresham1.c  brham1cm.c  cm1cga04.h  cm1cga06.h  cm1ega0d.h  cm1ega0dp.h  cm1ega10.h  cm1ega10p.h  cm1mcga11.h  cm1paradi5f.h  cm1s3_640.h  cm1svga6a.h  cm1tseng2e.h  cm1tseng30.h  cm1tseng38.h  cm1vbe16640.h  cm1vbe8_1k.h  cm1vbe8_640.h  cm1vga12.h  cm1vga12bp.h  cm1vga13.h  cm1vga13x.h  cm1vga13xp.h  cmtseng.h  common1.h  common1m.c  naive1.c  naive1cm.c
hw/: Makefile  Makefile.am
hw/cpu/: Makefile  Makefile.am  Makefile.dpl  Makefile.wcc  __TODO__  cpu.c  cpu.h  cpuid.asm  cpusse.c  cpusse.h  det386.asm  det86.asm  detfpu.asm  dpmi.c  dpmi.h  dpmi.inc  dpmie16.asm  nasmenva.inc  nasmsegs.inc  ssetest_dos16rm_dpmi.asm  ssetest_dpmi16.asm  ssetest_dpmi32.asm  ssetest_dpmi32win386.asm  ssetest_win32.c  ssetest_wintoolhelp.asm  ssetest_wintoolhelp386.asm  test1.c  winfcon.c
hw/cpu/lib/: Makefile.am  Makefile.dpl  Makefile.wcc  cpu.c  cpu.h  cpuid.asm  cpusse.c  cpusse.h  det386.asm  detfpu.asm  dpmi.c  dpmi.inc  nasm1632.inc  nasmsegs.inc  ssetest_dos16rm_dpmi32.asm  ssetest_dpmi16.asm  ssetest_dpmi32.asm  ssetest_dpmi32win386.asm  ssetest_linux.c  ssetest_win32.c  ssetest_wintoolhelp.asm  test1.c
misc/: useful.h
targets/: auto.dos16r.mak  auto.dos32p.mak  auto.efi.ia32.mak  auto.efi.x64.mak  auto.linuxhost.mak  auto.win16b.mak  auto.win16p.mak  auto.win16r.mak  auto.win32.mak  auto.win32s.mak  auto.winwa386.mak  config.dos16r.mak  (+9 more)
test/test1/: Makefile  Makefile.am  Makefile.wcc  compat.c  compat.h  nul.err  test1.c  test1c.c
traplog/dos/: Makefile  Makefile.am  Makefile.wcc  README  sanity1.asm  sanity2.asm  sanity3.asm  sanity4.asm  sanity5.asm  sanity6.asm  sanity7.asm  sanity8.asm  tfl8086.asm  tfldump.c  tflogdump.c  traplog.ash  traplog.h
windows/asmhello/: Makefile  Makefile.am  README
(+253 files in other folders)
