#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(doslib2, 2.0, jonathan@impactstudiopro.com)
AM_INIT_AUTOMAKE(doslib2,2.0)
AC_CONFIG_SRCDIR([cleantree])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_PREFIX_DEFAULT(/usr)
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_C_O

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT64_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_CHECK_FUNCS([memset])

LT_INIT

LIBS=-lm

m4_define([ISP_AUTO_OPTION_ENABLED_DEF],[
  AC_ARG_ENABLE([$1],AC_HELP_STRING([--][$5][-][$1],[$5 $3]))
  if test x"$enable_$2" = x
    then
    enable_$2=$4
  fi
  if test x"$enable_$2" = xyes
    then
    AC_DEFINE([ENABLE_][$2],[1],[$3])
  fi
  AM_CONDITIONAL([ENABLE_][$2],[test x"$enable_$2" = xyes])
])

m4_define([ISP_AUTO_OPTION_ENABLED],[ISP_AUTO_OPTION_ENABLED_DEF([$1],[$2],[$3],[yes],[disable])])
m4_define([ISP_AUTO_OPTION_DISABLED],[ISP_AUTO_OPTION_ENABLED_DEF([$1],[$2],[$3],[no],[enable])])

#ISP_AUTO_OPTION_ENABLED ([debug],            [debug],            [Make debug builds])
#ISP_AUTO_OPTION_ENABLED ([cpuonly],          [cpuonly],          [Make cpu-specific builds])
#ISP_AUTO_OPTION_ENABLED ([extlib],           [extlib],           [Make builds that call external memory-resident library functions])
#ISP_AUTO_OPTION_ENABLED ([mm-compact],       [mm_compact],       [Enable 16-bit compact memory model builds])
#ISP_AUTO_OPTION_ENABLED ([mm-small],         [mm_small],         [Enable 16-bit small memory model builds])
#ISP_AUTO_OPTION_ENABLED ([mm-medium],        [mm_medium],        [Enable 16-bit medium memory model builds])
#ISP_AUTO_OPTION_ENABLED ([mm-large],         [mm_large],         [Enable 16-bit large memory model builds])
#ISP_AUTO_OPTION_ENABLED ([mm-huge],          [mm_huge],          [Enable 16-bit huge memory model builds])
#ISP_AUTO_OPTION_ENABLED ([mm-flat],          [mm_flat],          [Enable 32-bit flat memory model builds])
#ISP_AUTO_OPTION_ENABLED ([dos16r],           [dos16r],           [Compile 16-bit real-mode DOS programs])
#ISP_AUTO_OPTION_ENABLED ([dos32p],           [dos32p],           [Compile 32-bit protected-mode DOS programs])
#ISP_AUTO_OPTION_ENABLED ([win16r],           [win16r],           [Compile 16-bit real-mode Win16 programs])
#ISP_AUTO_OPTION_ENABLED ([win16p],           [win16p],           [Compile 16-bit protected-mode Win16 programs])
#ISP_AUTO_OPTION_ENABLED ([win16b],           [win16b],           [Compile 16-bit bimodal (protected or real mode) Win16 programs])
#ISP_AUTO_OPTION_ENABLED ([win386],           [win386],           [Compile 32-bit Win386 programs])
#ISP_AUTO_OPTION_ENABLED ([win32s],           [win32s],           [Compile 32-bit Win32s programs])
#ISP_AUTO_OPTION_ENABLED ([win32],            [win32],            [Compile 32-bit Win32 programs (designed for Windows 9x/ME and NT/2000/XP/Vista/7/etc])
#ISP_AUTO_OPTION_ENABLED ([linux-host],       [linux_host],       [Compile programs for your host Linux system as well. Note that they are compiled anyway if needed for the build])
#ISP_AUTO_OPTION_ENABLED ([cpu-8086],         [cpu_8086],         [Enable 8086 level builds])
#ISP_AUTO_OPTION_ENABLED ([cpu-286],          [cpu_286],          [Enable 286 level builds])
#ISP_AUTO_OPTION_ENABLED ([cpu-386],          [cpu_386],          [Enable 386 level builds])
#ISP_AUTO_OPTION_ENABLED ([cpu-486],          [cpu_486],          [Enable 486 level builds])
#ISP_AUTO_OPTION_ENABLED ([cpu-586],          [cpu_586],          [Enable 586 level builds])
#ISP_AUTO_OPTION_ENABLED ([cpu-686],          [cpu_686],          [Enable 686 level builds])

AC_CONFIG_FILES(Makefile)

AC_OUTPUT

cat config.h.installed-prologue >>config.h
cat >>config.h <<_EOF
_EOF
./config_mak >config.mak
./config.h.filter <config.h >config_public.h

